# costopt-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
costopt_audit/: __init__.py  audit.py  graders.py  stats.py
examples/: audit_report.md  synthetic_benchmark_example.py
tests/: test_costbench_reproduction.py
tests/fixtures/: costbench_500.json  costopt-claude-temp1-500_results.csv  costopt-gpt-500_results.csv
