[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "costopt-audit"
version = "0.1.0"
description = "Benchmark-agnostic discrimination-drift audit, dual-grader discipline, and pseudo-replication-safe significance stack for LLM evaluation runs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sittiphol Phanvilai" }]
keywords = ["llm", "evaluation", "benchmark", "statistics", "grading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/nuuneoi/costopt-audit"
"Paper" = "https://github.com/nuuneoi/costopt-audit#readme"

[tool.setuptools.packages.find]
include = ["costopt_audit*"]
